--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
       <div class="alert alert-danger" role="alert">
         [Currently you have {{visit_count}} visits.]
       </div>
-      <p>[Jenkins Deploy test -----> Version 1]</p>
+      <p>[Jenkins Deploy test -----> Version 2]</p>
+      <p>TEST</p>
     </div>
 
     <div class="row">
