--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <div class="alert alert-danger" role="alert">
         [Currently you have {{visit_count}} visits.]
       </div>
-      <p>[Jenkins Deploy test -----> Version 2]</p>
+      <p>[Jenkins Deploy test -----> Version 2-newnew]</p>
       <p>TEST</p>
     </div>
 
